<resources>
    <string name="app_name">Ola</string>
    <string name="internet_connection_error">No se ha detectado una conexión de internet activa</string>
    <string name="login_login">INGRESAR</string>
    <string name="login_error_bad_form">Datos incorrectos,  si no recuerdas los detalles, intenta re-establecer tu contraseña</string>
    <string name="login_welcome_message">Bienvenido</string>
    <string name="register_title">Registrarte es sencillo</string>
    <string name="register_error_bad_form">Please check that your passwords match and your email is entered correctly.</string>
    <string name="register_welcome_message">Bienvenido, gracias por registrarte</string>
    <string name="forgot_title">RECUPERAR CONTRASEÑA</string>
    <string name="forgot_email">Correo electrónico</string>
    <string name="forgot_send">ENVIAR</string>
    <string name="forgot_success">An email has been sent to EMAIL</string>
    <string name="tour_slide1_title">Know God is here to help you grow in your walk with God!</string>
    <string name="tour_slide1_text">Keep track of your daily Bible, Prayer, and Action goals by tapping the colored bars on your Goals page and leave detailed notes for that day.</string>
    <string name="tour_swipe">Swipe to Continue</string>
    <string name="tour_slide2_title">Know God is here to encourage you forward in your journey!</string>
    <string name="tour_slide2_text">Keep track of your Bible, Prayer, and Action streaks in your Profile.</string>
    <string name="tour_slide3_title">Know God has an Accountability feature for you and your friends!</string>
    <string name="tour_slide3_text">Add accountability partners and check their progress through the Accountability tab in your Profile.</string>
    <string name="tour_slide4_title">God has great things in store for you through this app!</string>
    <string name="tour_slide4_text">You’re ready to go! \nHave fun!</string>
    <string name="tour_slide4_button">GET STARTED</string>
    <string name="main_menu_goals">GOALS</string>
    <string name="main_menu_profile">PROFILE</string>
    <string name="main_menu_ideas">IDEAS</string>
    <string name="continyar">Continuar</string>
    <string name="register_subtitle">Antes de comenzar, nos gustaría conocerte</string>
    <string name="register">Registrarme</string>
    <string name="register_politics">Al presionar \"Registrarme\" aceptas todos los Términos y condiciones que conlleva el uso de la app Canlove.</string>
    <string name="guardar">GUARDAR</string>
    <string name="facebook_app_id">2671880273136335</string>
    <string name="fb_login_protocol_scheme">fb2671880273136335</string>
    <string name="default_notification_channel_id">com.app.ola</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="filtros">Filtros</string>
    <string name="deparment_2">Departamento:</string>
    <string name="title_activity_place_detail">PlaceDetailActivity</string>
    <string name="previous">Previous</string>
    <string name="address">{address}</string>
    <string name="hatn">Horario de atención</string>
    <string name="ninfo">Sin información disponible</string>
    <string name="serv">Servicios</string>
    <string name="reserv">Citas</string>
    <string name="resrvtx">Puedes realizar citas en esta oficina comercial para realizar tus trámites</string>
    <string name="resrvtx2">Solicita tu cita</string>
    <string name="nodata">No hay datos disponibles</string>
    <string name="near">Cerca de ti</string>
    <string name="gonow">Ir ahora</string>
    <string name="kmsp">De tu ubicación actual</string>
    <string name="verification">Código de verificación</string>
    <string name="title_activity_my_theft_reports_list">MyTheftReportsListActivity</string>
    <string name="title_theft">Denuncia de hurto</string>
    <string name="theft_step_1">Evidencias</string>
    <string name="step_ok">\u2713</string>
    <string name="theft_subtl">Denunciando el hurto de energía, contribuyes a la mejora continua del servicio y a tu comunidad.</string>
    <string name="ver_mas">Más detalles</string>
    <string name="title_activity_theft_step1">TheftStep1Activity</string>
    <string name="theft_step_2">Ubicación</string>
    <string name="theft_step_3">Detalles</string>
    <string name="theft_1">Añade fotografías para evidenciar el hurto</string>
    <string name="nextr">SIGUIENTE</string>
    <string name="title_activity_theft_step2">TheftStep2Activity</string>
    <string name="theft_step2_text">Revisa los detalles de tu denuncia antes de enviar la información:</string>
    <string name="hazard_step2_text">Revisa los detalles del reporte antes de enviar la información:</string>
    <string name="theft_ind_1">Datos de ubicación</string>
    <string name="touch_edit">Toca para editar</string>
    <string name="city_2">Municipio:</string>
    <string name="reference">Referencia:</string>
    <string name="reference_2">Referencia de ubicación:</string>
    <string name="theft_ind_2">Motivo y horario observado</string>
    <string name="schedule">Horario:</string>
    <string name="reason">Motivo:</string>
    <string name="description">Descripción:</string>
    <string name="adjunt">"Adjuntaste: "</string>
    <string name="fotos">" fotos"</string>
    <string name="finish_theft">ENVIAR REPORTE</string>
    <string name="title_activity_theft_details">TheftDetailsActivity</string>
    <string name="details">Detalles</string>
    <string name="title_activity_theft_details_case">TheftDetailsCaseActivity</string>
    <string name="following">Seguimiento</string>
    <string name="actual_status">Estado actual:</string>
    <string name="description_2">Describe los hechos</string>
    <string name="theft_follow_1">Enviado</string>
    <string name="theft_follow_2">Validado</string>
    <string name="theft_follow_3">Resolución</string>
    <string name="title_activity_p_o_list">POListActivity</string>
    <string name="viewmoredetails">Más detalles</string>
    <string name="title_activity_news_list">NewsListActivity</string>
    <string name="title_activity_news_deetail">NewsDeetailActivity</string>
    <string name="title_news">Noticias AES</string>
    <string name="title_po">Interrupciones</string>
    <string name="title_po_1">programadas</string>
    <string name="query_nic">Consulta tu NIC</string>
    <string name="st_in_progress">EN PROGRESO</string>
    <string name="title_activity_p_o_detail">PODetailActivity</string>
    <string name="back">Atrás</string>
    <string name="title_activity_my_innovation_form_list">MyInnovationFormListActivity</string>
    <string name="title_activity_new_innovation_form">NewInnovationFormActivity</string>
    <string name="title_activity_innovation_form_detail">InnovationFormDetailActivity</string>
    <string name="title_activity_my_hazard_reports_list">MyHazardReportsListActivity</string>
    <string name="title_activity_hazard_reports_details">HazardReportsDetailsActivity</string>
    <string name="title_activity_hazard_reports_details_case">HazardReportsDetailsCaseActivity
    </string>
    <string name="title_activity_hazard_step1">HazardStep1Activity</string>
    <string name="title_activity_hazard_step2">HazardStep2Activity</string>
    <string name="title_hazard">Reporte de peligros</string>
    <string name="hazard_subtl">AES aconseja a la población mantenerse a más de un metro de distancia de los cables y equipos eléctricos; el contacto con ellos puede poner en riesgo la seguridad física e incluso ocasionar la muerte.</string>
    <string name="title_hazard2">en la red</string>
    <string name="hazard">Peligro</string>
    <string name="hazard_ind_2">Peligro observado</string>
    <string name="hazard_to">Peligro:</string>
    <string name="hazard_sind_2">Peligro y descripción observado</string>
    <string name="title_activity_my_account">MyAccountActivity</string>
    <string name="mydata">Mis datos</string>
    <string name="ttoedit">Toca para editar</string>
    <string name="spersonalData">Datos personales</string>
    <string name="contactData">Datos de contacto</string>
    <string name="nicslist">Mis NICs asociados</string>
    <string name="staddnic">AGREGAR NIC</string>
    <string name="title_activity_account_settings">AccountSettingsActivity</string>
    <string name="mysettings">Configuraciones</string>
    <string name="not_1">Reclamos</string>
    <string name="not_2">Solicitudes</string>
    <string name="not_3">Consultas</string>
    <string name="not_4">Ordenes de servicio</string>
    <string name="not_5">Interrupciones</string>
    <string name="not_6">Factura del mes</string>
    <string name="not_7">Cuenta pendiente</string>
    <string name="accountsetting">Cuenta</string>
    <string name="changepwd">Cambiar contraseña</string>
    <string name="closesession">Cerrar sesión</string>
    <string name="title_activity_add_nic">AddNicActivity</string>
    <string name="add">Agregar</string>
    <string name="nic">NIC *</string>
    <string name="docnumberfact">Número de última factura</string>
    <string name="alias">Nombre personalizado</string>
    <string name="agregar">AGREGAR</string>
    <string name="nameinput">Nombres y apellidos</string>
    <string name="names">Nombres</string>
    <string name="lastnames">Apellidos</string>
    <string name="update">ACTUALIZAR</string>
    <string name="title_form_1">Ayúdanos</string>
    <string name="title_inno_2">a innovar</string>
    <string name="inno_text">Ingresa los detalles de tu idea de innovación</string>
    <string name="inno_descr">En AES El Salvador estamos interesados en conocer tus ideas innovadoras en relación al servicio de Energía Eléctrica, por lo que te invitamos a formar parte del equipo creativo que contribuirá a la máxima satisfacción de nuestros clientes</string>
    <string name="innovationidea">Idea de innovación</string>
    <string name="status_enviado">Enviada</string>
    <string name="inno_step_1">Enviada</string>
    <string name="describes_innovation">Describe tu idea o comentario</string>
    <string name="send">ENVIAR</string>
    <string name="inno_step_3">Finalizado</string>
    <string name="title_details_inno">Detalles</string>
    <string name="descript_sended">Descripción enviada</string>
    <string name="no_data">No hay datos disponibles</string>
    <string name="followup">Seguimiento</string>
    <string name="saatus">Estado actual</string>
    <string name="title_activity_appointments_main">AppointmentsMainActivity</string>
    <string name="title_activity_online_consumption">OnlineConsumptionActivity</string>
    <string name="selectnic">Selecciona un NIC</string>
    <string name="style_rounded">rounded_box</string>
    <string name="query">CONSULTAR</string>
    <string name="consumo">Consumo</string>
    <string name="enlinea">en línea</string>
    <string name="consumo_fecha">Su consumo a la fecha es de:</string>
    <string name="aceptar">ACEPTAR</string>
    <string name="title_activity_n_i_c_billing_status">NICBillingStatusActivity</string>
    <string name="title_activity_billing_history">BillingHistoryActivity</string>
    <string name="title_activity_pagadito_payment">PagaditoPaymentActivity</string>
    <string name="title_activity_cons_simulatot">ConsSimulatotActivity</string>
    <string name="title_activity_management_main">ManagementMainActivity</string>
    <string name="title_activity_new_service_requests_list">NewServiceRequestsListActivity</string>
    <string name="billing">Facturas</string>
    <string name="txlastbilling">Detalles de última factura</string>
    <string name="csmokw">Consumo en kWh</string>
    <string name="monthperiod">Mes facturado</string>
    <string name="duedate">Fecha de vencimiento</string>
    <string name="txtdetaillastbilling">Detalle de facturación</string>
</resources>