<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <RelativeLayout
                android:id="@+id/btnBack"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/circle_btn"
                android:backgroundTint="@color/white"
                android:elevation="@dimen/_5sdp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/_10sdp"
                    android:tint="@color/colorAccent6"
                    app:srcCompat="@drawable/ic_left" />
            </RelativeLayout>
            <ImageView
                android:id="@+id/imgPlace"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_180sdp"
                android:scaleType="center"
                />

            <RelativeLayout
                android:id="@+id/btnCall"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:background="@drawable/circle_btn"
                android:backgroundTint="@color/white"
                android:elevation="@dimen/_5sdp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/_10sdp"
                    app:srcCompat="@drawable/ic_phone" />
            </RelativeLayout>
        </RelativeLayout>


        <LinearLayout
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/imgPlace"
            android:orientation="vertical"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            >
            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/colorAccent6"
                android:text="@string/address"/>
            <TextView
                android:layout_marginTop="@dimen/_10sdp"
                android:id="@+id/tvAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/address"
                android:textSize="@dimen/_8sdp"
                android:textColor="@color/colorPrimary"/>

            <View
                android:alpha=".3"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/colorGrayLight"/>

            <TextView
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/hatn"
                android:textSize="@dimen/_9sdp"
                android:textColor="@color/colorAccent6"/>
            <TextView
                android:layout_marginTop="@dimen/_10sdp"
                android:id="@+id/tvBsched1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/ninfo"
                android:textSize="@dimen/_8sdp"
                android:textColor="@color/colorPrimary"/>
            <TextView
                android:id="@+id/tvBsched2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/ninfo"
                android:textSize="@dimen/_8sdp"
                android:textColor="@color/colorPrimary"/>
            <TextView
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/serv"
                android:textSize="@dimen/_9sdp"
                android:textColor="@color/colorAccent6"/>
                <TextView
                    android:id="@+id/tvNodata"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nodata"
                    android:fontFamily="@font/montserrat"
                    android:textColor="@color/colorPrimaryDarkTransp"
                    />
            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginTop="@dimen/_10sdp"
                android:elevation="@dimen/_10sdp"
                android:id="@+id/rvServices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="5"
                tools:listitem="@layout/row_services" />

            <LinearLayout
                android:id="@+id/reservationssec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/reserv"
                    android:textSize="@dimen/_9sdp"
                    android:textColor="@color/colorAccent6"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/resrvtx"
                    android:textSize="@dimen/_8sdp"
                    android:textColor="@color/colorPrimary"/>
                <TextView
                    android:id="@+id/tvgotoReservations"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:gravity="center"
                    android:text="@string/resrvtx2"
                    android:textSize="@dimen/_10sdp"
                    android:textColor="@color/colorPrimary"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>