<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/_50sdp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">



    <TextView
        android:id="@+id/lbl1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:text="@string/hazard_step2_text"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/sect_1"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/lbl1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:layout_width="@dimen/_12sdp"
                android:layout_height="match_parent"
                android:tint="#A3A3A5"
                app:srcCompat="@drawable/ic_places"/>
            <TextView
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/theft_ind_1"
                android:textColor="#4B7493"
                android:fontFamily="@font/montserrat_bold"/>


        </LinearLayout>
        <View
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="#c4c4c4"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnEdit"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/sect_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            >
            <TextView
                android:layout_weight="50"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:textColor="@color/colorPrimary"
                android:text="@string/deparment_2"/>
            <TextView
                android:id="@+id/tvDepto"
                android:layout_weight="50"
                android:gravity="right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/colorPrimary"
                android:text="@string/touch_edit"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            >
            <TextView
                android:layout_weight="50"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:textColor="@color/colorPrimary"
                android:text="@string/city_2"/>
            <TextView
                android:id="@+id/tvCity"
                android:layout_weight="50"
                android:gravity="right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/colorPrimary"
                android:text="@string/touch_edit"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="100"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            >
            <TextView
                android:layout_weight="50"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:textColor="@color/colorPrimary"
                android:text="@string/reference"/>
            <TextView
                android:id="@+id/tvRef"
                android:justificationMode="inter_word"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_weight="50"
                android:gravity="left"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/colorPrimary"
                android:text="@string/touch_edit"/>
        </LinearLayout>


        <LinearLayout
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/lbl1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <ImageView
                    android:layout_width="@dimen/_12sdp"
                    android:layout_height="match_parent"
                    android:tint="#A3A3A5"
                    app:srcCompat="@drawable/ic_bino"/>
                <TextView
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hazard_sind_2"
                    android:textColor="#4B7493"
                    android:fontFamily="@font/montserrat_bold"/>


            </LinearLayout>
            <View
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="#c4c4c4"/>
        </LinearLayout>


<!--        <LinearLayout-->
<!--            android:layout_marginTop="@dimen/_10sdp"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="horizontal"-->
<!--            android:weightSum="100"-->
<!--            android:layout_marginLeft="@dimen/_20sdp"-->
<!--            android:layout_marginRight="@dimen/_20sdp"-->
<!--            >-->
<!--            <TextView-->
<!--                android:layout_weight="50"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:fontFamily="@font/montserrat"-->
<!--                android:textColor="@color/colorPrimary"-->
<!--                android:text="@string/schedule"/>-->
<!--            <TextView-->
<!--                android:id="@+id/tvSchedule"-->
<!--                android:layout_weight="50"-->
<!--                android:gravity="right"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:fontFamily="@font/montserrat_bold"-->
<!--                android:textColor="@color/colorPrimary"-->
<!--                android:text="@string/touch_edit"/>-->
<!--        </LinearLayout>-->

        <LinearLayout
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            >
            <TextView
                android:layout_weight="50"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:textColor="@color/colorPrimary"
                android:text="@string/hazard_to"/>
            <TextView
                android:id="@+id/tvReason"
                android:layout_weight="50"
                android:gravity="right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/colorPrimary"
                android:text="@string/touch_edit"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="100"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            >
            <TextView
                android:layout_weight="50"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:textColor="@color/colorPrimary"
                android:text="@string/description"/>
            <TextView
                android:id="@+id/tvdesc"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_weight="50"
                android:gravity="left"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/colorPrimary"
                android:text="@string/touch_edit"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adjunt"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/montserrat"/>
            <TextView
                android:id="@+id/tvCountPics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/montserrat_bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fotos"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/montserrat_bold"/>

        </LinearLayout>


    </LinearLayout>

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/pgSending"
        style="@style/SpinKitView.Large.Circle"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        app:SpinKit_Color="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>